# tasktracker

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: commands.cpp  commands.hpp  helper.hpp  json_parser.cpp  json_parser.hpp  main.cpp  task.hpp  task_list.cpp  task_list.hpp
